--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -50,14 +50,14 @@
      <a  href="/questions/answered" type="button"
        class="btn btn-default <% if action_name == 'answered' %>active <% end %>">
      <i class="glyphicon glyphicon-ok"></i>&nbspAnswered</a>
-     <a href="/questions/unanswered" type="button" class="btn btn-default <% if action_name == 'unanswered' %>active <% end %>""><i class="glyphicon glyphicon-exclamation-sign"></i>&nbspUnanswerd</a>
-     <a href="/questions/hot" type="button" class="btn btn-default <% if action_name == 'hot' %>active <% end %>""><i class="glyphicon glyphicon-fire"></i>&nbspHot</a>
-    <a href="/questions/latest" type="button" class="btn btn-default <% if action_name == 'latest' %>active <% end %>""><i class="glyphicon glyphicon-flash"></i>&nbspLatest</a>
+     <a href="/questions/unanswered" type="button" class="btn btn-default <% if action_name == 'unanswered' %>active <% end %>""><i class="glyphicon glyphicon-exclamation-sign"></i> Unanswered</a>
+     <a href="/questions/hot" type="button" class="btn btn-default <% if action_name == 'hot' %>active <% end %>""><i class="glyphicon glyphicon-fire"></i> Hot</a>
+    <a href="/questions/latest" type="button" class="btn btn-default <% if action_name == 'latest' %>active <% end %>""><i class="glyphicon glyphicon-flash"></i> Latest</a>
 
-   <a href="/questions/active" type="button" class="btn btn-default <% if action_name == 'active' %>active <% end %>""><i class="glyphicon glyphicon-sort-by-attributes"></i>&nbspActive</a>
+   <a href="/questions/active" type="button" class="btn btn-default <% if action_name == 'active' %>active <% end %>""><i class="glyphicon glyphicon-sort-by-attributes"></i> Active</a>
 
     
-    <a href="/questions/advise" type="button" class="btn btn-default col-md-offset-1 "><i class="glyphicon glyphicon-question-sign" data-no-turbolink></i>&nbspAsk Question</a>
+    <a href="/questions/advise" type="button" class="btn btn-default col-md-offset-1 "><i class="glyphicon glyphicon-question-sign" data-no-turbolink></i> Ask Question</a>
    </div> 
   </div>
 </div>
