--- a/app/views/questions/advise.html.erb
+++ b/app/views/questions/advise.html.erb
@@ -1,7 +1,7 @@
 <div class="flow">
 <h4>  How to Ask   </h4>
   <hr>
-<h4>  Welcome to  Overflow! </h4>
+<h4>  Welcome to  Inquire </h4>
 
  <p> We’d love to help you, but the reality is that not every question gets answered. To improve your chances, here are some tips:
 
@@ -28,6 +28,7 @@
 
 <p>  The answer to your question may not always be the one you wanted, but that doesn’t mean it is wrong. A conclusive answer isn’t always possible. When in doubt, ask people to cite their sources, or to explain how/where they learned something. Even if we don’t agree with you, or tell you exactly what you wanted to hear, remember: we’re just trying to help.   </p>
 
+  <a class="btn btn-small pull-right" href="/questions/new">Proceed >></a>
 
 </div>
 
