--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <div class="flow">
-<h4>New to Overflow? sign-up</h4>
+<h4>New to Inquire? sign-up</h4>
 <hr>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <% if @user.errors.any? %>
