--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -64,7 +64,7 @@
                 <% end %>
      <div class="row">
              <div class="col-md-7 six">
-              <h1> Welcome to Overflow.</h1>
+              <h1> Welcome to Inquire.</h1>
 <p class="lead" style="color:#fff">Experience exicting moments and share ideas with professionals, getting Satisfying  answers to questions in all Categories of life.<br/> Share & Flow</p>    
              </div>
            <div class="col-md-5 col-md-offset-0">
