--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -11,6 +11,7 @@
     <%= f.hidden_field :commentable_type %>
     <%= f.hidden_field :commentable_id %>
   <br />
+    </div>
   <div class="actions">
     <%= f.submit (@comment.new_record? ? "Post comment" : "Update comment"), class:'btn btn-primary btn-lg' %>
   </div>
