--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -31,35 +31,49 @@
     </div>
 
     <div class="form-group">
-      <label>First name</label>
+      <label>Tell us about your self</label>
       <%= f.text_area :bio, class:"form-control", rows:"3" %>
     </div>
 
     <div class="form-group">
-      <label>First name</label>
-      <%= f.text_field :first_name, class:"form-control"   %>
+      <label>Intrest</label>
+      <%= f.text_field :intrest, class:"form-control" %>
     </div>
 
     <div class="form-group">
-      <label>First name</label>
-      <%= f.text_field :first_name, class:"form-control"   %>
+      <label>Occupation</label>
+      <%= f.text_field :occupation, class:"form-control" %>
     </div>
 
     <div class="form-group">
-      <label>First name</label>
-      <%= f.text_field :first_name, class:"form-control"   %>
+        <label for="exampleInputEmail1">Email address</label>
+        <%= f.text_field :email, class:"form-control", id:"exampleInputEmail1", placeholder:"Enter email"  %>
     </div>
 
-  <div class="form-group">
-    <label for="exampleInputFile">File input</label>
-    <input type="file" id="exampleInputFile">
-    <p class="help-block">Example block-level help text here.</p>
-  </div>
-  <div class="checkbox">
-    <label>
-      <input type="checkbox"> Check me out
-    </label>
-  </div>
+    <div class="form-group">
+        <label for="exampleInputFile">Profile Picture</label>
+        <%= f.file_field :avatar, id:"exampleInputFile"  %>
+        <p class="help-block">Please upload a profile picture Max (5mb).</p>
+    </div>
+
+    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+        <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+    <% end %>
+
+    <div class="form-input">
+        <label for="exampleInputEmail1">Password</label>
+        <%= f.password_field :password, hint: "leave it blank if you don't want to change it", class:"form-control", id:"exampleInputEmail1", placeholder:"password" %>
+    </div>
+
+    <div class="form-inputs">
+        <label for="exampleInputEmail1">Password comfirmation</label>
+        <%= f.password_field :password_confirmation, class:"form-control", id:"exampleInputEmail1", placeholder:"password" %>
+    </div>
+
+    <div class="form-inputs">
+        <label for="exampleInputEmail1">Current Password</label>
+        <%= f.password_field :current_password, hint: "we need your current password to confirm your changes",  class:"form-control", id:"exampleInputEmail1", placeholder:"current password" %>
+    </div>
 
 
   <%= f.submit "Update  Account", class:"btn btn-default" %>
