--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,6 +1,6 @@
 
 <h3>Start Asking Question</h3>
-  <div class="alert alert-info">
+  <div class="alert alert-warning col-md-10">
    <strong> How to Ask</strong>
     We prefer questions that can be answered, not just discussed.
     Provide details. Share your research.
