--- a/app/views/answers/_form.html.erb
+++ b/app/views/answers/_form.html.erb
@@ -1,33 +1,47 @@
 <div class="clear"></div>
 <div>
-<% if current_user.nil? %>
-  <p>First <%= link_to "sign in", new_user_session_path %> to post a Answer.</p>
-<% elsif cannot? :create, :answers %>
-  <p>You have been banned from creating Answers. Please  if you are a legitimate user.</p>
-<% else %>
-<%= form_for @answer, :remote => true do |f| %>
+  <% if current_user.nil? %>
+      <p>First <%= link_to "sign in", new_user_session_path %> to post a Answer.</p>
+  <% elsif cannot? :create, :answers %>
+      <p>You have been banned from creating Answers. Please  if you are a legitimate user.</p>
+  <% else %>
+      <%= form_for @answer, class: 'form-horizontal', :remote => true do |f| %>
 
 
-  <div class="field">
-    <%= f.text_area :body, class:"form-control"%>
-  </div>
+          <div class="form-group">
+            <div class="col-lg-10">
+              <div class="form-header">
+                <nav>
+                  <a href="#"><i class="glyphicon glyphicon-bold"></i></a>
+                  <a href="#"><i class="glyphicon glyphicon-italic"></i></a>
+                  <a href="#"><i class="glyphicon glyphicon-link"></i></a>
+                  <a href="#"><i class="glyphicon glyphicon-align-center"></i></a>
+                  <a href="#"><i class="glyphicon glyphicon-align-left"></i></a>
+                  <a href="#"><i class="glyphicon glyphicon-align-right"></i></a>
+                  <a href="#"><i class="glyphicon glyphicon-question-sign help-toggle"></i></a>
+                </nav>
+                <div class="editing-help">
+                  <p>To create code blocks or other preformatted text, indent by four spaces:</p>
+                  <p>This will be displayed in a monospaced font. The first four spaces</p>
+                  <p>will be stripped off, but all other whitespace will be preserved.</p> </br>
+
+                  <p>Markdown and HTML are turned off in code blocks:</p>
+                  <p><i>This is not italic</i>, and [this is not a link](http://example.com)</p>
+                </div>
+              </div>
+              <%= f.text_area :body, :class=>"form-control post_form", rows:10 %>
+            </div>
+          </div>
 
 
-    <%= f.hidden_field :question_id  %>
-    <%= f.hidden_field :user_id %>
+          <%= f.hidden_field :question_id  %>
+          <%= f.hidden_field :user_id %>
 
-  <br />
-  <div class="actions">
-    <%= f.submit (@answer.new_record? ? "Post Answer" : "Update Answer"), class:'btn btn-primary btn-lg' %>
-  </div>
-<% end %>
-<% end %>
-
-<style>
-  #cke_12, #cke_19, #cke_27, 
-  #cke_32, #cke_50,  #cke_69, #cke_11 {
-     display:none;
-   }
-</style>
+          <br />
+          <div class="actions">
+            <%= f.submit (@answer.new_record? ? "Post Answer" : "Update Answer"), class:'btn btn-primary btn-lg' %>
+          </div>
+      <% end %>
+  <% end %>
 </div>
 
