--- a/app/assets/stylesheets/questions.css.scss
+++ b/app/assets/stylesheets/questions.css.scss
@@ -359,6 +359,17 @@ a{
   padding: 10px;
 }
 
+.border-settings{
+  border: 1px solid #F5F5F5;
+}
+
+
+.posting{
+  float: right;
+  font-weight: bolder;
+  color: cornflowerblue;
+  display: none;
+}
 
 
 
