--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,10 +1,10 @@
 <%= content_tag_for(:tr, comment, style:"border-bottom:1px solid #ccc; background:rgba(161, 141, 192, 0.11);") do %> 
-   <td style="padding: 10px;">  
+   <td style="padding: 10px; ">
     <%= raw (comment.body) %>
-    <%= link_to(t("comment.edit"),
+   --- <%= link_to(("Edit"),
                 edit_comment_path(comment),
                 :remote => true,
-                ) if user_signed_in? && comment.user == current_user %> –  
+                ) if user_signed_in? && comment.user == current_user %> –
                  <%=link_to comment.user.username, user_path(comment.user)%>
                 <span class="text-info">
                <small class="text-muted">
