--- a/app/views/layouts/display.html.erb
+++ b/app/views/layouts/display.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title><%= yield :title %> INQUIRE</title>
-  <%= stylesheet_link_tag    "application", 'ckeditor/ckeditor.js', media: "all", "data-turbolinks-track" => true %>
+  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 
@@ -26,17 +26,20 @@
 
 <div class="container">
   <div class="row clear-top">
-   <div class="col-md-9"><div class="">
+   <div class="col-md-9 border-settings">
 
- <% flash.each do |key, value| %>
-                    <div class="<%= flash_class(key) %>">
-                      <%= value %>
-                    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+<% flash.each do |key, value| %>
+    <div class="<%= flash_class(key) %>">
+      <%= value %>
+    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
 
-                    </div>
-                <% end %>
-<%= yield %></div></div>
-   <div class="col-md-3" style="padding-right:0px; padding-left:0px;"><%= render :partial => "questions/related_questions" %></div>
+    </div>
+<% end %>
+<%= yield %>
+   </div>
+   <div class="col-md-3">
+     <%= render :partial => "questions/related_questions" %>
+   </div>
   </div>
 </div>
 
