--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,13 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8">
+          <% flash.each do |key, value| %>
+              <div class="<%= flash_class(key) %>">
+                <%= value %>
+                <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
 
+              </div>
+          <% end %>
           <%= yield %>
         </div>
         <div class="col-md-4">
