--- a/app/views/users/_users.html.erb
+++ b/app/views/users/_users.html.erb
@@ -6,7 +6,7 @@
                        <div class="litle-profile"><%=image_tag user.avatar.url(:thumb) %></div>
                        </div>
                          <div class="gen-content">
-                           <p><%=link_to user.fullname, user %></p>
+                           <p><%=link_to user.username, user %></p>
                           <p>
                           <small>
                            <p><%= user.intrest %></p>  
