configure redis on heroku

--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -322,7 +322,7 @@ textarea {
 }
 
 a {
-  color: #563D7C;
+  color: #1db4c1;
   text-decoration: none;
   -webkit-transition-property: color;
     -webkit-transition-duration: 1s;
