--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -26,7 +26,7 @@
   </div>
 </div>
 
-
+   <% if f.object.password_required?  %>
      <div class="form-inputs">
           <div class="form-group">
        <%= f.password_field :password, required: true, :label=> :false, :class=>"form-control", :placeholder=>"Password" %>
@@ -44,7 +44,7 @@
         <button class="btn btn-success">Sign up</button>
 
       </div>
-
+     <% end %>
       <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
 <% end %>
 </div>
