Ajaxify comment and answer

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -442,7 +442,7 @@ td.chbox {
     padding-top: 20px;
     padding-bottom: 15px;
 
-    color: #989c9e;
+    color: rgb(89, 89, 90);
     font-size: 14px;
     font-family: 'Open Sans Light', sans-serif;   
     line-height: 25px;
