--- a/app/views/questions/create.js.erb
+++ b/app/views/questions/create.js.erb
@@ -1,3 +1,2 @@
- $('#answers').append("<%= escape_javascript(render(@answer)) %>");
- $('#answer_body')[0].reset();
-
+ $('.post').append("<%= escape_javascript(render(@answer)) %>");
+ $('#post_form')[0].reset();
