--- a/app/views/answers/create.js.erb
+++ b/app/views/answers/create.js.erb
@@ -1,3 +1,3 @@
- $('#answers').append("<%= escape_javascript(render(@answer)) %>");
- $('#answer_body')[0].reset();
+ $('.answer-post').append("<%= escape_javascript(render(@answer)) %>");
+ $('.new_answer').reset();
 
