--- a/app/views/answers/destroy.js.erb
+++ b/app/views/answers/destroy.js.erb
@@ -1,1 +1,1 @@
-$("#<%= dom_id(@answer) %>").replaceWith("<%= escape_javascript("<div class='alert-info'>Comment was deleted</div>".html_safe) %>");
+$("#<%= dom_id(@answer) %>").replaceWith(" ");
