--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,10 +1,19 @@
-<blockquote>
-   <%= raw (comment.body) %>
-  <span class="original">Posted by - <%=link_to comment.user.username, user_path(comment.user)%> ,
+<%= content_tag_for(:blockquote, comment)  do %>
+    <%= raw (comment.body) %>
+    <span class="original">Posted by - <%=link_to comment.user.username, user_path(comment.user)%> ,
     on: <%= distance_of_time_in_words_to_now comment.created_at(),
-                                                                                                                                           :include_seconds => true %> ago</span>
-  <%= link_to(("Edit"),
-              edit_comment_path(comment),
-              :remote => true,
-      ) if user_signed_in? && comment.user == current_user %>
-</blockquote>
+                                             :include_seconds => true %> ago</span>
+    <%= link_to(("Edit"),
+                edit_comment_path(comment),
+                :remote => true,
+        ) if user_signed_in? && comment.user == current_user %>
+    &nbsp
+    <%= link_to((" <i class='fa fa-trash'></i> Delete".html_safe),
+                comment_path(comment),
+                method: :delete,
+                :remote => true,
+                class: 'text-danger',
+        ) if user_signed_in? && comment.user == current_user %>
+<% end %>
+
+
