--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -4,5 +4,5 @@ alert("<%= @comment.errors.full_messages.to_sentence.html_safe %>");
 <% else %>
 $('#new_comment').fadeOut('slow');
 $('#comment_link').fadeIn('slow');
-$("#new_comment_<%= @comment.id %>").append("<%=raw escape_javascript render(@comment) %>");
+$("#comments").append("<%=raw escape_javascript render(@comment) %>");
 <% end %>
