--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -13,19 +13,14 @@
       <%= link_to  @question.user.username.titleize, @question.user %>
     </div>
     <div class="posttext pull-left">
-      <h2><%= (@question.name) %></h2>
+      <h2 class="color-andela"><%= (@question.name) %></h2>
       <p><%=raw markdown(@question.body) %></p>
       <% if @question.comments.present? %>
-          <div id="comments" class="comments">
-            <%=pluralize @question.comments.count, "comment"  %>
-              <%= render @question.comments %>
+          <div id="comments">
+            <p class="color-andela" id="comment-count"><%=pluralize (@question.comments.count), "comment"   %></p>
+             <%= render @question.comments %>
           </div>
       <% end %>
-      <%= link_to "Add comment".html_safe, new_comment_path(:comment => { :commentable_type => @question.class.name,
-                                                                                  :commentable_id => @question.id}),
-                                                                                  :remote => true,
-                                                                                  :class => "btn comment_link",
-                                                                                  id:"comment_link" if current_user   %>
       <div id="comment-form"></div>
     </div>
     <div class="clearfix"></div>
@@ -36,11 +31,15 @@
       <%= render :partial =>"questions/votebox" %>
     </div>
     <div class="prev pull-left">
-      <a href="#"><i class="fa fa-reply"></i></a>
+    <%= link_to "<i class='fa fa-reply'></i>".html_safe, new_comment_path(:comment => { :commentable_type => @question.class.name,
+                                                                          :commentable_id => @question.id}),
+                  :remote => true,
+                  :class => "comment_link",
+                  id:"comment_link" if current_user   %>
     </div>
 
     <div class="posted pull-left"><i class="fa fa-clock-o"></i> Posted on : <%= (@question.created_at).strftime("%-d %b @ %-l:%M%P") %></div>
-       <% if current_user && @question.user == current_user || current_user.admin?  %>
+       <%  if user_signed_in? && @question.user == current_user  %>
         <div class="next pull-right">
           <%= link_to "<i class='fa fa-pencil'></i>".html_safe, edit_question_path(@question) %>
           <%= link_to "<i class='fa fa-trash'></i>".html_safe, question_path(@question), method: :delete %>
@@ -50,8 +49,9 @@
   </div>
 </div><!-- POST -->
 
-
+<div class="answer-post">
 <%= render :partial => @question.answers %>
+</div>
 <%= render "answers/form" %>
 
 
